c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/extra_credit/incr_expression_statement.c
int main(void) {
    int a = 0;
    int b = 0;
    a++;
    ++a;
    ++a;
    b--;
    --b;
    return (a == 3 && b == -2);
}