c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_semantics/extra_credit/compound_invalid_lvalue.c
int main(void) {
    int a = 0;
    -a += 1;
    return a;
}